--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
             <nav class="navigation">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a class="nav-link"  href="#">
+                        <a class="nav-link" href="#">
                             HOME
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="#">
+                        <a class="nav-link" href="#">
                             PAGES
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="#">
+                        <a class="nav-link" href="#">
                             BLOG
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="#">
+                        <a class="nav-link" href="#">
                             GALLERY
                         </a>
                     </li>
@@ -48,14 +48,25 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                           <a class="nav-link" href="#">
+                        <a class="nav-link" href="#">
                             CONTACTS
-                           </a>
+                        </a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
+    <section class="introduce">
+        <div class="container">
+                <h1 class="introduce-title">
+                    Enjoy scuba diving <br> with us
+                </h1>
+                <p class="introduce-text">
+                    We offer a wide variety of scuba diving <br> tours and locations for everyone
+                </p>
+
+                <img class="introduce-img" src="img/image1.png" alt="">
+    </section>
 </body>
 
 </html>
