--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
         </div>
     </header>
     <section class="introduce">
-        <div class="container">
+        <div class="container introduce-wrap">
+            <div class="text-wrap">
                 <h1 class="introduce-title">
                     Enjoy scuba diving <br> with us
                 </h1>
                 <p class="introduce-text">
                     We offer a wide variety of scuba diving <br> tours and locations for everyone
                 </p>
-
+            </div>
                 <img class="introduce-img" src="img/image1.png" alt="">
+            <div>
     </section>
 </body>
 
