--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container introduce-wrap">
             <div class="text-wrap">
                 <h1 class="introduce-title">
-                    Enjoy scuba diving <br> with us
+                    Enjoy scuba diving with us
                 </h1>
                 <p class="introduce-text">
                     We offer a wide variety of scuba diving <br> tours and locations for everyone
