--- a/index.html
+++ b/index.html
@@ -56,117 +56,184 @@
             </nav>
         </div>
     </header>
-    <section class="introduce">
-        <div class="container introduce-wrap">
-            <div class="text-wrap">
-                <h1 class="introduce-title">
-                    Enjoy scuba diving With us
-                </h1>
-                <p class="introduce-text">
-                    We offer a wide variety of scuba diving <br> tours and locations for everyone
-                </p>
+    <main>
+        <section class="introduce">
+            <div class="container introduce-wrap">
+                <div class="text-wrap">
+                    <h1 class="introduce-title">
+                        Enjoy scuba diving With us
+                    </h1>
+                    <p class="introduce-text">
+                        We offer a wide variety of scuba diving <br> tours and locations for everyone
+                    </p>
+                </div>
+                <img class="introduce-img" src="img/image1.png" alt="">
+                <div>
+        </section>
+        <section class="destinations">
+            <div class="container">
+                <h2 class="destinations-title">
+                    Destinations
+                </h2>
+                <ul class="destinations-list">
+                    <li class="destinations-item">
+                        <img src="img/image2.png" alt="">
+                        <h3 class="destinations-subtitle">
+                            Maldives
+                        </h3>
+                        <p class="destinations-text">
+                            True abundance of marine life
+                        </p>
+                        <a class="destinations-link" href="">book now</a>
+                    </li>
+                    <li class="destinations-item">
+                        <img src="img/image3.png" alt="">
+                        <h3 class="destinations-subtitle">
+                            Indonesia
+                        </h3>
+                        <p class="destinations-text">
+                            Unique marine diversity
+                        </p>
+                        <a class="destinations-link" href="">book now</a>
+                    </li>
+                    <li class="destinations-item">
+                        <img src="img/image4.png" alt="">
+                        <h3 class="destinations-subtitle">
+                            Australia
+                        </h3>
+                        <p class="destinations-text">
+                            The world’s top scuba destination
+                        </p>
+                        <a class="destinations-link" href="">book now</a>
+                    </li>
+                </ul>
             </div>
-            <img class="introduce-img" src="img/image1.png" alt="">
-            <div>
-    </section>
-    <section class="destinations">
+        </section>
+        <section class="blog">
+            <div class="container">
+                <h2 class="blog-title">
+                    Our Blog
+                </h2>
+                <div class="blog-wrap">
+                    <article class="blog-article">
+                        <a class="blog-link" href="">
+                            <img class="blog-img" src="img/image5.png" alt="">
+                            <div class="article-wrap">
+                                <span class="blog-word">
+                                    August 9, 2021
+                                </span>
+                                <h3 class="blog-subtitle">
+                                    New Caledonia: The Lagoon of All Hopes
+                                </h3>
+                                <p class="blog-text">As we dived for the very first time in the lagoon of New Caledonia.
+                                    at Duck
+                                    Island. with only
+                                    our masks and fins..
+                                </p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="blog-article">
+                        <a class="blog-link" href="">
+                            <img class="blog-img" src="img/image6.png" alt="">
+                            <div class="article-wrap">
+                                <span class="blog-word">
+                                    August 9, 2021
+                                </span>
+                                <h3 class="blog-subtitle">
+                                    Scuba Diving in Okinawa: A First-timer Guide
+                                </h3>
+                                <p class="blog-text">It is one of these places where it is not so straightforward to
+                                    organize a
+                                    scuba diving trip. There are so many...
+                                </p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="blog-article">
+                        <a class="blog-link" href="">
+                            <img class="blog-img" src="img/image7.png" alt="">
+                            <div class="article-wrap">
+                                <span class="blog-word">
+                                    August 9, 2021
+                                </span>
+                                <h3 class="blog-subtitle">
+                                    Shore Diving in Maui & Big <br>
+                                    Island
+                                </h3>
+                                <p class="blog-text">The Hawaiian Archipelago is full of bucket dives with exciting
+                                    adventures
+                                    such as diving in the crater...
+                                </p>
+                            </div>
+                        </a>
+                    </article>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
         <div class="container">
-            <h2 class="destinations-title">
-                Destinations
-            </h2>
-            <ul class="destinations-list">
-                <li class="destinations-item">
-                    <img src="img/image2.png" alt="">
-                    <h3 class="destinations-subtitle">
-                        Maldives
-                    </h3>
-                    <p class="destinations-text">
-                        True abundance of marine life
-                    </p>
-                    <a class="destinations-link" href="">book now</a>
-                </li>
-                <li class="destinations-item">
-                    <img src="img/image3.png" alt="">
-                    <h3 class="destinations-subtitle">
-                        Indonesia
-                    </h3>
-                    <p class="destinations-text">
-                        Unique marine diversity
-                    </p>
-                    <a class="destinations-link" href="">book now</a>
-                </li>
-                <li class="destinations-item">
-                    <img src="img/image4.png" alt="">
-                    <h3 class="destinations-subtitle">
-                        Australia
-                    </h3>
-                    <p class="destinations-text">
-                        The world’s top scuba destination
-                    </p>
-                    <a class="destinations-link" href="">book now</a>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section class="blog">
-        <div class="container">
-            <h2 class="blog-title">
-                Our Blog
-            </h2>
-            <div class="blog-wrap">
-                <article class="blog-article">
-                    <a class="blog-link" href="">
-                        <img class="blog-img" src="img/image5.png" alt="">
-                        <div class="article-wrap">
-                        <span class="blog-word">
-                            August 9, 2021
-                        </span>
-                        <h3 class="blog-subtitle">
-                            New Caledonia: The Lagoon of All Hopes
-                        </h3>
-                        <p class="blog-text">As we dived for the very first time in the lagoon of New Caledonia. at Duck
-                            Island. with only
-                            our masks and fins..
-                        </p>
-                    </div>
-                    </a>
-                </article>
-                <article class="blog-article">
-                    <a class="blog-link" href="">
-                        <img class="blog-img" src="img/image6.png" alt="">
-                        <div class="article-wrap">
-                        <span class="blog-word">
-                            August 9, 2021
-                        </span>
-                        <h3 class="blog-subtitle">
-                            Scuba Diving in Okinawa: A First-timer Guide
-                        </h3>
-                        <p class="blog-text">It is one of these places where it is not so straightforward to organize a
-                            scuba diving trip. There are so many...
-                        </p>
-                    </div>
-                    </a>
-                </article>
-                <article class="blog-article">
-                    <a class="blog-link" href="">
-                        <img class="blog-img" src="img/image7.png" alt="">
-                        <div class="article-wrap">
-                        <span class="blog-word">
-                            August 9, 2021
-                        </span>
-                        <h3 class="blog-subtitle">
-                            Shore Diving in Maui & Big <br>
-                            Island
-                        </h3>
-                        <p class="blog-text">The Hawaiian Archipelago is full of bucket dives with exciting adventures
-                            such as diving in the crater...
-                        </p>
-                    </div>
-                    </a>
-                </article>
+            <div class="footer-wrap-wrap">
+            <div class="img-list">
+                <h2 class="footer-title">
+                    Gallery
+                </h2>
+                <ul class="footer-list-img">
+                    <li class="footer-item">
+                        <img src="./img/image8.png" alt="" class="footer-img">
+                    </li>
+                    <li class="footer-item">
+                        <img src="./img/image9.png" alt="" class="footer-img">
+                    </li>
+                    <li class="footer-item">
+                        <img src="./img/image10.png" alt="" class="footer-img">
+                    </li>
+                    <li class="footer-item">
+                        <img src="./img/image11.png" alt="" class="footer-img">
+                    </li>
+                    <li class="footer-item">
+                        <img src="./img/image12.png" alt="" class="footer-img">
+                    </li>
+                    <li class="footer-item">
+                        <img src="./img/image13.png" alt="" class="footer-img">
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-wrap">
+                <h2 class="footer-title">
+                    Quick Links
+                </h2>
+                <ul class="footer-list">
+                    <li class="footer-item-wrap">
+                        <a class="footer-link-wrap" href="">About Us</a>
+                    </li>
+                    <li class="footer-item-wrap">
+                        <a class="footer-link-wrap" href="">What We Offer</a>
+                    </li>
+                    <li class="footer-item-wrap">
+                        <a class="footer-link-wrap" href="">FAQ</a>
+                    </li>
+                    <li class="footer-item-wrap">
+                        <a class="footer-link-wrap" href="">Instructors</a>
+                    </li>
+                    <li class="footer-item-wrap">
+                        <a class="footer-link-wrap" href="">Instructors</a>
+                    </li>
+                    <li class="footer-item-wrap">
+                        <a class="footer-link-wrap" href="">Blog</a>
+                    </li>
+                    <li class="footer-item-wrap">
+                        <a class="footer-link-wrap" href="">Gallery</a>
+                    </li>
+                    <li class="footer-item-wrap">
+                        <a class="footer-link-wrap" href="">Pricing</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </section>
+        </div>
+    </footer>
 </body>
 
 </html>
