--- a/index.html
+++ b/index.html
@@ -175,63 +175,72 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-wrap-wrap">
-            <div class="img-list">
-                <h2 class="footer-title">
-                    Gallery
-                </h2>
-                <ul class="footer-list-img">
-                    <li class="footer-item">
-                        <img src="./img/image8.png" alt="" class="footer-img">
-                    </li>
-                    <li class="footer-item">
-                        <img src="./img/image9.png" alt="" class="footer-img">
-                    </li>
-                    <li class="footer-item">
-                        <img src="./img/image10.png" alt="" class="footer-img">
-                    </li>
-                    <li class="footer-item">
-                        <img src="./img/image11.png" alt="" class="footer-img">
-                    </li>
-                    <li class="footer-item">
-                        <img src="./img/image12.png" alt="" class="footer-img">
-                    </li>
-                    <li class="footer-item">
-                        <img src="./img/image13.png" alt="" class="footer-img">
-                    </li>
-                </ul>
+                <div class="img-list">
+                    <h2 class="footer-title">
+                        Gallery
+                    </h2>
+                    <ul class="footer-list-img">
+                        <li class="footer-item">
+                            <img src="./img/image8.png" alt="" class="footer-img">
+                        </li>
+                        <li class="footer-item">
+                            <img src="./img/image9.png" alt="" class="footer-img">
+                        </li>
+                        <li class="footer-item">
+                            <img src="./img/image10.png" alt="" class="footer-img">
+                        </li>
+                        <li class="footer-item">
+                            <img src="./img/image11.png" alt="" class="footer-img">
+                        </li>
+                        <li class="footer-item">
+                            <img src="./img/image12.png" alt="" class="footer-img">
+                        </li>
+                        <li class="footer-item">
+                            <img src="./img/image13.png" alt="" class="footer-img">
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-wrap">
+                    <h2 class="footer-title">
+                        Quick Links
+                    </h2>
+                    <div class="footer-list-wrap">
+                        <ul class="footer-list-one">
+                            <li class="footer-item-wrap">
+                                <a class="footer-link-wrap" href="">About Us</a>
+                            </li>
+                            <li class="footer-item-wrap">
+                                <a class="footer-link-wrap" href="">What We Offer</a>
+                            </li>
+                            <li class="footer-item-wrap">
+                                <a class="footer-link-wrap" href="">FAQ</a>
+                            </li>
+                            <li class="footer-item-wrap">
+                                <a class="footer-link-wrap" href="">Instructors</a>
+                            </li>
+                        </ul>
+                        <ul class="footer-list">
+                            <li class="footer-item-wrap">
+                                <a class="footer-link-wrap" href="">Contact Us</a>
+                            </li>
+                            <li class="footer-item-wrap">
+                                <a class="footer-link-wrap" href="">Blog</a>
+                            </li>
+                            <li class="footer-item-wrap">
+                                <a class="footer-link-wrap" href="">Gallery</a>
+                            </li>
+                            <li class="footer-item-wrap">
+                                <a class="footer-link-wrap" href="">Pricing</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="footer-wrap">
-                <h2 class="footer-title">
-                    Quick Links
-                </h2>
-                <ul class="footer-list">
-                    <li class="footer-item-wrap">
-                        <a class="footer-link-wrap" href="">About Us</a>
-                    </li>
-                    <li class="footer-item-wrap">
-                        <a class="footer-link-wrap" href="">What We Offer</a>
-                    </li>
-                    <li class="footer-item-wrap">
-                        <a class="footer-link-wrap" href="">FAQ</a>
-                    </li>
-                    <li class="footer-item-wrap">
-                        <a class="footer-link-wrap" href="">Instructors</a>
-                    </li>
-                    <li class="footer-item-wrap">
-                        <a class="footer-link-wrap" href="">Instructors</a>
-                    </li>
-                    <li class="footer-item-wrap">
-                        <a class="footer-link-wrap" href="">Blog</a>
-                    </li>
-                    <li class="footer-item-wrap">
-                        <a class="footer-link-wrap" href="">Gallery</a>
-                    </li>
-                    <li class="footer-item-wrap">
-                        <a class="footer-link-wrap" href="">Pricing</a>
-                    </li>
-                </ul>
+            <div class="footer-desrciption">
+                    <p class="footer-desrciption-text">
+                        © 2023 Divers. All Rights Reserved. Privacy Policy
+                    </p>
             </div>
-        </div>
         </div>
     </footer>
 </body>
