--- a/article-two.html
+++ b/article-two.html
@@ -16,13 +16,14 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/article.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container nav-wrap">
             <nav class="navigation">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="./index.html">
                             HOME
                         </a>
                     </li>
@@ -58,39 +59,33 @@
     <main class="main">
         <div class="container">
             <h1 class="article-title">
-                New Caledonia: The Lagoon of All Hopes
+                Scuba diving in Okinawa: a first-timer guide
             </h1>
-            <div class="article-wrap">
-                <div>
-                    <p class="article-text">
-                        I quickly wondered why the lagoon of New Caledonia remains rather unknown internationally while
-                        it
-                        beats many records:
-                    </p>
-                    <ul class="article-list">
-                        <li class="article-item">
-                            <p class="article-text">a total surface area of more than 40,000km² making it the largest lagoon in the world.</p>
-                        </li>
-                        <li class="article-item">
-                            <p class="article-text">a coral reef stretching over 1,600km, the 2nd largest barrier reef in the world after the
-                            Great
-                            Barrier Reef of Australia which is 2,300km long and not Belize as often mentioned, which is
-                            only
-                            300km long, even if we count the Meso-American barrier reef, which goes from Mexico to
-                            Honduras
-                            over 1,000km.</p>
-                        </li>
-                        <li class="article-item">
-                            <p class="article-text">more than 20,000 marine and plant species, including protected species such as dugongs, sea
-                            turtles and humpback whales, an exceptionally high number of coastal fish species (1,764
-                            species
-                            were listed, it is much more than the rest of the Pacific, especially compared to Hawaii or
-                            French Polynesia), and 400 coral species.</p>
-                        </li>
-                    </ul>
-                </div>
-                <img class="article-img" src="./img/scuba-article-img.webp" alt="">
-            </div>
+            <img class="article-turtle" src="./img/turtle.webp" alt="">
+            <p class="article-text">
+                This post may contain affiliate links. It means I may earn a commission if you book or purchase
+                something. This is at no cost to you and support this website.
+            </p>
+            <p class="main-text">
+                The Okinawa Prefecture, in the southernmost province of Japan, counts <span class="article-word">three main archipelagos:</span> the
+                Okinawa Islands, the Miyako Islands and the Yaeyamaislands, forming all together the Ryukyu Islands. I
+                know it can be confusing but try to differentiate Okinawa Island, the Okinawa Islands, the Okinawa
+                Prefecture!
+            </p>
+            <p class="main-text">
+                Before becoming a Japanese Prefecture in 1879, Okinawa used to be an independent country: the <span class="article-word">Ryukyu
+                Kingdom.</span> From the 15th Century, the Ryukyu Kings were paying tribute to the Chinese Emperor. Hence there
+                is a strong Chinese influence in the local Okinawan culture. After the painful events Okinawa went
+                through during WWII, there is no doubt that you are in Japan when you walk in the streets of Naha today,
+                but with a twist.
+            </p>
+            <p class="main-text">
+                Okinawa is one of these places where it is  <span class="article-word">not so straightforward to organise a scuba diving trip.</span> There
+                are so many islands in the prefecture of Okinawa, so many scuba diving experiences, at different periods
+                of the year: it became somehow overwhelming to answer “What? Where? When?” As this was the first trip of
+                a long series to Okinawa Prefecture, I thought a first-timer guide to scuba diving in Okinawa would make
+                sense!
+            </p>
         </div>
     </main>
     <footer class="footer">
@@ -164,7 +159,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
