--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="navigation">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="./index.html">
                             HOME
                         </a>
                     </li>
@@ -116,7 +116,7 @@
                 </h2>
                 <div class="blog-wrap">
                     <article class="blog-article">
-                        <a class="blog-link" href="">
+                        <a class="blog-link" href="./article-one.html">
                             <img class="blog-img" src="img/image5.png" alt="">
                             <div class="article-wrap">
                                 <span class="blog-word">
@@ -134,7 +134,7 @@
                         </a>
                     </article>
                     <article class="blog-article">
-                        <a class="blog-link" href="">
+                        <a class="blog-link" href="./article-two.html">
                             <img class="blog-img" src="img/image6.png" alt="">
                             <div class="article-wrap">
                                 <span class="blog-word">
@@ -151,7 +151,7 @@
                         </a>
                     </article>
                     <article class="blog-article">
-                        <a class="blog-link" href="">
+                        <a class="blog-link" href="./article-three.html">
                             <img class="blog-img" src="img/image7.png" alt="">
                             <div class="article-wrap">
                                 <span class="blog-word">
