--- a/article-one.html
+++ b/article-one.html
@@ -37,17 +37,17 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#footer">
                             GALLERY
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#footer">
                             ELEMENTS
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#footer">
                             CONTACTS
                         </a>
                     </li>
@@ -93,7 +93,7 @@
             </div>
         </div>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="container">
             <div class="footer-wrap-wrap">
                 <div class="img-list">
