--- a/article-three.html
+++ b/article-three.html
@@ -38,17 +38,17 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#footer">
                             GALLERY
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#footer">
                             ELEMENTS
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#footer">
                             CONTACTS
                         </a>
                     </li>
@@ -139,7 +139,7 @@
             </ul>
         </div>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="container">
             <div class="footer-wrap-wrap">
                 <div class="img-list">
