--- a/destination-one.html
+++ b/destination-one.html
@@ -14,7 +14,8 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/article.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/destinatios.css">
 </head>
 
 <body>
@@ -57,36 +58,44 @@
         </div>
     </header>
     <main class="main">
-        <div class="container">
-            <h1 class="article-title">
-                Scuba diving in Okinawa: a first-timer guide
-            </h1>
-            <img class="article-turtle" src="./img/turtle.webp" alt="">
-            <p class="article-text">
-                This post may contain affiliate links. It means I may earn a commission if you book or purchase
-                something. This is at no cost to you and support this website.
-            </p>
-            <p class="main-text">
-                The Okinawa Prefecture, in the southernmost province of Japan, counts <span class="article-word">three main archipelagos:</span> the
-                Okinawa Islands, the Miyako Islands and the Yaeyamaislands, forming all together the Ryukyu Islands. I
-                know it can be confusing but try to differentiate Okinawa Island, the Okinawa Islands, the Okinawa
-                Prefecture!
-            </p>
-            <p class="main-text">
-                Before becoming a Japanese Prefecture in 1879, Okinawa used to be an independent country: the <span class="article-word">Ryukyu
-                Kingdom.</span> From the 15th Century, the Ryukyu Kings were paying tribute to the Chinese Emperor. Hence there
-                is a strong Chinese influence in the local Okinawan culture. After the painful events Okinawa went
-                through during WWII, there is no doubt that you are in Japan when you walk in the streets of Naha today,
-                but with a twist.
-            </p>
-            <p class="main-text">
-                Okinawa is one of these places where it is  <span class="article-word">not so straightforward to organise a scuba diving trip.</span> There
-                are so many islands in the prefecture of Okinawa, so many scuba diving experiences, at different periods
-                of the year: it became somehow overwhelming to answer “What? Where? When?” As this was the first trip of
-                a long series to Okinawa Prefecture, I thought a first-timer guide to scuba diving in Okinawa would make
-                sense!
-            </p>
-        </div>
+        <section class="maldives" id="maldives">
+            <div class="container">
+                <h1 class="maldives-title">
+                    True abundance of marine life
+                </h1>
+                <p class="maldives-text">
+                    The Maldives is the smallest country in Asia. Including the sea, the territory spans roughly 90,000
+                    square <br> kilometres (35,000 sq mi), and a land area of 298 square kilometres
+                </p>
+                <img class="maldives-img" src="./img/maldives.jpg" alt="">
+                <div class="maldives-wrap">
+                    <div class="maldives-possibility">
+                        <ul class="possibility-list">
+                            <li class="possibility-item">
+                                <p class="possibility-text">
+                                    &sstarf; For two persons
+                                </p>
+                            </li>
+                            <li class="possibility-item">
+                                <p class="possibility-text">
+                                    &sstarf; Vacation time: 2 weeks
+                                </p>
+                            </li>
+                            <li class="possibility-item">
+                                <p class="possibility-text">
+                                    &sstarf; All meals are included
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="maldives-prices">
+                        <h2 class="prices-title">
+                            Price: 1.540$
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer" id="footer">
         <div class="container">
