--- a/destination-three.html
+++ b/destination-three.html
@@ -14,7 +14,8 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/article.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/destinatios.css">
 </head>
 
 <body>
@@ -57,36 +58,50 @@
         </div>
     </header>
     <main class="main">
-        <div class="container">
-            <h1 class="article-title">
-                Scuba diving in Okinawa: a first-timer guide
-            </h1>
-            <img class="article-turtle" src="./img/turtle.webp" alt="">
-            <p class="article-text">
-                This post may contain affiliate links. It means I may earn a commission if you book or purchase
-                something. This is at no cost to you and support this website.
-            </p>
-            <p class="main-text">
-                The Okinawa Prefecture, in the southernmost province of Japan, counts <span class="article-word">three main archipelagos:</span> the
-                Okinawa Islands, the Miyako Islands and the Yaeyamaislands, forming all together the Ryukyu Islands. I
-                know it can be confusing but try to differentiate Okinawa Island, the Okinawa Islands, the Okinawa
-                Prefecture!
-            </p>
-            <p class="main-text">
-                Before becoming a Japanese Prefecture in 1879, Okinawa used to be an independent country: the <span class="article-word">Ryukyu
-                Kingdom.</span> From the 15th Century, the Ryukyu Kings were paying tribute to the Chinese Emperor. Hence there
-                is a strong Chinese influence in the local Okinawan culture. After the painful events Okinawa went
-                through during WWII, there is no doubt that you are in Japan when you walk in the streets of Naha today,
-                but with a twist.
-            </p>
-            <p class="main-text">
-                Okinawa is one of these places where it is  <span class="article-word">not so straightforward to organise a scuba diving trip.</span> There
-                are so many islands in the prefecture of Okinawa, so many scuba diving experiences, at different periods
-                of the year: it became somehow overwhelming to answer “What? Where? When?” As this was the first trip of
-                a long series to Okinawa Prefecture, I thought a first-timer guide to scuba diving in Okinawa would make
-                sense!
-            </p>
-        </div>
+        <section class="maldives">
+            <div class="container">
+                <h1 class="maldives-title">
+                    The world’s top scuba destination
+                </h1>
+                <p class="maldives-text">
+                    Surrounded by the Indian and Pacific oceans, Australia is separated from Asia by the Arafura
+                    and Timor seas, with the Coral Sea lying off the Queensland coast, and the Tasman Sea lying between
+                    Australia and New Zealand. The world's smallest continent and sixth largest country by total
+                    area, Australia—owing to its size and isolation—is often dubbed the "island continent" and
+                    is sometimes considered the world's largest island.
+                </p>
+                <div class="indonesia-wrap">
+                    <img class="australia-img" src="./img/kangaroo.jpg" alt="">
+                    <img class="australia-img" src="./img/koala.webp" alt="">
+                </div>
+                <div class="maldives-wrap">
+                    <div class="maldives-possibility">
+                        <ul class="possibility-list">
+                            <li class="possibility-item">
+                                <p class="possibility-text">
+                                    &sstarf; For three persons
+                                </p>
+                            </li>
+                            <li class="possibility-item">
+                                <p class="possibility-text">
+                                    &sstarf; Vacation time: half week
+                                </p>
+                            </li>
+                            <li class="possibility-item">
+                                <p class="possibility-text">
+                                    &sstarf; Just breakfast is included
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="maldives-prices">
+                        <h2 class="prices-title">
+                            Price: 
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer" id="footer">
         <div class="container">
@@ -159,6 +174,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
