--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#destination">
                             PAGES
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#blog">
                             BLOG
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#footer">
                             GALLERY
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#footer">
                             ELEMENTS
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#footer">
                             CONTACTS
                         </a>
                     </li>
@@ -57,7 +57,7 @@
         </div>
     </header>
     <main>
-        <section class="introduce">
+        <section class="introduce" id="introduce">
             <div class="container introduce-wrap">
                 <div class="text-wrap">
                     <h1 class="introduce-title">
@@ -70,7 +70,7 @@
                 <img class="introduce-img" src="img/image1.png" alt="">
                 <div>
         </section>
-        <section class="destinations">
+        <section class="destinations" id="destination">
             <div class="container">
                 <h2 class="destinations-title">
                     Destinations
@@ -84,7 +84,7 @@
                         <p class="destinations-text">
                             True abundance of marine life
                         </p>
-                        <a class="destinations-link" href="">book now</a>
+                        <a class="destinations-link" href="destination-one.html">book now</a>
                     </li>
                     <li class="destinations-item">
                         <img src="img/image3.png" alt="">
@@ -94,7 +94,7 @@
                         <p class="destinations-text">
                             Unique marine diversity
                         </p>
-                        <a class="destinations-link" href="">book now</a>
+                        <a class="destinations-link" href="destination-two.html">book now</a>
                     </li>
                     <li class="destinations-item">
                         <img src="img/image4.png" alt="">
@@ -104,12 +104,12 @@
                         <p class="destinations-text">
                             The world’s top scuba destination
                         </p>
-                        <a class="destinations-link" href="">book now</a>
+                        <a class="destinations-link" href="destination-three.html">book now</a>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="blog">
+        <section class="blog" id="blog">
             <div class="container">
                 <h2 class="blog-title">
                     Our Blog
@@ -172,7 +172,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="container">
             <div class="footer-wrap-wrap">
                 <div class="img-list">
